--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 Fonctions à créer:
 - create matrix
 - display matrix
+
+
+Partie 1:
+- player must find
+- clues : three right moves
+- enter nbr row and column and choose between 1 and 0
